complete simple battle

--- a/app/index.html
+++ b/app/index.html
@@ -19,13 +19,13 @@
     <div id="enemy_area">
         <div class="combatant" id="enemy_1">
             <div>头像</div>
-            <div id="name_area">name:
+            <div class="name_area">name:
                 <span>enemy</span>
             </div>
-            <div id="hp_area">hp:
-                <span>100</span>
+            <div class="hp_area">hp:
+                <span id="enemy_1_hp">100</span>
             </div>
-            <div id="mp_area">mp:
+            <div class="mp_area">mp:
                 <span>50</span>
             </div>
         </div>
@@ -34,13 +34,13 @@
     <div id="team_area">
         <div class="combatant" id="teammate_1">
             <div>头像</div>
-            <div id="name_area">name:
+            <div class="name_area">name:
                 <span>yourself</span>
             </div>
-            <div id="hp_area">hp:
+            <div class="hp_area">hp:
                 <span>100</span>
             </div>
-            <div id="mp_area">mp:
+            <div class="mp_area">mp:
                 <span>50</span>
             </div>
         </div>
